--- a/Estadisticas Descriptivas.ipynb
+++ b/Estadisticas Descriptivas.ipynb
@@ -1,8 +1,51 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Herramientas computacionales: El arte de la Analítica\n",
+    "\n",
+    "Grupo 1\n",
+    "\n",
+    "\n",
+    "Joshua Ricardo Acosta Ramírez A01652266\n",
+    "\n",
+    "Leslie Ugalde Zamudio A01657397\n",
+    "\n",
+    "Alex Álvaro Flores Contreras A01653320\n",
+    "\n",
+    "\n",
+    "INSTITUTO TECNOLÓGICO DE ESTUDIOS SUPERIORES DE MONTERREY\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cargamos nuestra base de datos (covid19_tweets.csv) utilizando pandas:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "data=pd.read_csv(\"covid19_tweets.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Con data.head() se muestran los primeros 5 datos  de la base: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -163,20 +206,65 @@
        "4  ['CoronaVirusUpdates', 'COVID19']  Twitter for Android       False  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "data=pd.read_csv(\"covid19_tweets.csv\")\n",
-    "data.head()\n"
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Verificamos la cantidad de datos con data.count():"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "user_name           74436\n",
+       "user_location       59218\n",
+       "user_description    70079\n",
+       "user_created        74436\n",
+       "user_followers      74436\n",
+       "user_friends        74436\n",
+       "user_favourites     74436\n",
+       "user_verified       74436\n",
+       "date                74436\n",
+       "text                74436\n",
+       "hashtags            53002\n",
+       "source              74424\n",
+       "is_retweet          74436\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Obtenemos la estadística descriptiva con el comando data.describe():"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +358,7 @@
        "max      1.389284e+07  497363.000000     2.047197e+06"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,8 +368,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El conteo nos da un total de 74,436 en las 3 columnas de las diferentes variables.\n",
+    "La media del user_followers fue de 10,595; la de user_ friends 2155 y por último; user_favourites tuvo una media de 15,297. Por consiguiente, la desviación estándar se encuentra en nuestro tercer renglón, sin embargo estos números son muy altos, por lo que quiere decir que hay una distancia grande entre los datos. Con respecto a la mediana, el número de en medio es 960, el cual quiere decir que el 50% de los datos está por debajo de ese número.\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -336,8 +432,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -362,11 +460,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Vínculo al github: https://github.com/Alexjgxt18/AnaliticaReto3.git \n",
+    "\n",
+    "Conclusion:\n",
+    "\n",
+    "El conocimiento y uso de diversas de librerías dentro del lenguaje de programación Python, nos permite  nosotros como estudiantes, descubrir nuevas herramientas que permiten que las tareas que se nos piden, sean llevadas a cabo de una manera mucho más fácil, tal y como sucede con la librería que se ha usado en la clase del día de hoy: Pandas.  Es maravilloso ver cómo se sintetizan las líneas de código para llegar al mismo resultado, para lo que antes necesitábamos poco más de 10 líneas, hoy se requiere solo una, y se puede obtener muchas más información de la que se pedía."
+   ]
   }
  ],
  "metadata": {
